--- a/звіт.md
+++ b/звіт.md
@@ -24,12 +24,12 @@
 ```lisp
 (defun my-sort (sorted lst key test)
   (if lst
-      (my-sort (merge 'list sorted (list (funcall key (car lst))) test) (cdr lst) key test)
+      (my-sort (merge 'list sorted (list (car lst)) test :key key) (cdr lst) key test)
       sorted))
 
 (defun sort-start (lst &key (key #'identity) (test #'<))
   (when lst
-    (my-sort (list (funcall key (car lst))) (cdr lst) key test)))
+    (my-sort (list (car lst)) (cdr lst) key test)))
 ```
 ### Тестові набори та утиліти першої частини
 ```lisp
@@ -39,25 +39,55 @@
     (format t "~:[FAILED~;passed~]... ~a~%" (equal result expected) name)))
 
 (defun test1 ()
-  (check-function "Test1" 'sort-start '(1 2 3 4 5) '(4 3 5 1 2))
-  (check-function "Test2" 'sort-start '(1 2 3 4) '(3 2 1 0) :key #'1+)
-  (check-function "Test3" 'sort-start '(4 3 2 1) '(0 1 2 3) :key #'1+ :test #'>))
+  (check-function "Test1" 'sort-start '(-3 -1 0 2) '(-3 2 -1 0))
+  (check-function "Test2" 'sort-start '(0 -1 2 -3) '(-3 2 -1 0) :key #'abs)
+  (check-function "Test3" 'sort-start '(-3 2 -1 0) '(0 -1 2 -3) :key #'abs :test #'>))
 ```
 ### Тестування першої частини
 ```lisp
 CL-USER> (test1)
-Result Test1: (1 2 3 4 5)
+Result Test1: (-3 -1 0 2)
 passed... Test1
-Result Test2: (1 2 3 4)
+Result Test2: (0 -1 2 -3)
 passed... Test2
-Result Test3: (4 3 2 1)
+Result Test3: (-3 2 -1 0)
 passed... Test3
 NIL
 ```
 ## Варіант другої частини 6
+
+Написати функцію ```rpropagation-reducer``` , яка має один ключовий параметр — функцію
+```comparator``` . ```rpropagation-reducer``` має повернути функцію, яка при застосуванні в
+якості першого аргумента ```reduce``` робить наступне: при обході списку з кінця, якщо
+елемент списку-аргумента ```reduce``` не "кращий" за попередній (той, що "справа") згідно з
+```comparator``` , тоді він заміняється на значення попереднього, тобто "кращого", елемента.
+Якщо ж він "кращий" за попередній елемент згідно ```comparator``` , тоді заміна не
+відбувається. Функція ```comparator``` за замовчуванням має значення ```#'<``` . Обмеження,
+які накладаються на використання функції-результату ```rpropagation-reducer``` при
+передачі у ```reduce``` визначаються розробником (тобто, наприклад, необхідно чітко
+визначити, якими мають бути значення ключових параметрів функції ```reduce``` ```from-end```
+та ```initial-value``` ).
+```lisp
+CL-USER> (reduce (rpropagation-reducer)
+'(3 2 1 2 3)
+:from-end ...
+:initial-value ...)
+(1 1 1 2 3)
+CL-USER> (reduce (rpropagation-reducer)
+'(3 1 4 2)
+:from-end ...
+:initial-value ...)
+(1 1 2 2)
+CL-USER> (reduce (rpropagation-reducer :comparator #'>)
+'(1 2 3)
+:from-end ...
+:initial-value ...)
+(3 3 3)
+```
+
 ## Лістинг функції з використанням деструктивного підходу
 ```lisp
-(defun rpropagation-reducer (&key (comparator #'<))
+(defun rpropagation-reducer (&key (comparator #'<))    ;ключові параметри reduce з використанням цієї функції: :from-end t :initial-value nil
   (let ((best nil))  
     (lambda (left right)
       (if (null right)
